--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "CliCode",
+  "name": "cli-code",
   "version": "0.0.1",
   "private": true,
   "scripts": {
@@ -9,6 +9,8 @@
     "test": "jest"
   },
   "dependencies": {
+    "@react-native-firebase/app": "^18.6.1",
+    "@react-native-firebase/firestore": "^18.6.1",
     "react": "18.2.0",
     "react-native": "0.72.7"
   },
