--- a/package.json
+++ b/package.json
@@ -9,12 +9,16 @@
     "test": "jest"
   },
   "dependencies": {
+    "@react-native-async-storage/async-storage": "^1.21.0",
     "@react-native-firebase/app": "^18.6.1",
     "@react-native-firebase/auth": "^18.6.1",
     "@react-native-firebase/firestore": "^18.6.1",
     "@react-native-google-signin/google-signin": "^10.1.1",
+    "mobx": "^6.12.0",
+    "mobx-react-lite": "^4.0.5",
     "react": "18.2.0",
-    "react-native": "0.72.7"
+    "react-native": "0.72.7",
+    "react-native-sound": "^0.11.2"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
